# wisp

./: .clippy.toml  .gitignore  .rustfmt.toml  .swiftformat  .swiftlint.yml  AGENTS.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/actions/setup-nix/: action.yaml
.github/actions/setup-rust-cache/: action.yaml
.github/workflows/: build-macos-app.yaml  formal.yaml  nix.yaml  pages.yaml  release.yaml  rust-macos.yaml  rust-windows.yaml  rust.yaml  swift.yaml  version-bump.yaml
apps/wisp-desktop/: Cargo.toml  Info.plist  wisp-desktop.entitlements
apps/wisp-desktop/assets/: AppIcon.icns  make-icon.sh  make-icon.swift
apps/wisp-desktop/src/: about_view.rs  app.rs  app_menu.rs  data_dir.rs  ipc_server.rs  library.rs  main.rs  mcp_setup_view.rs  permissions.rs  session_runner.rs  session_updates.rs  settings.rs  setup.rs  transcript_export.rs  transcript_view.rs  tray.rs
apps/wisp-mcp/: Cargo.toml
apps/wisp-mcp/src/: main.rs  pagination.rs
crates/wisp-audiokit/: Cargo.toml
crates/wisp-audiokit-sys/: Cargo.toml  build.rs
crates/wisp-audiokit-sys/src/: lib.rs
crates/wisp-audiokit-win/: Cargo.toml
crates/wisp-audiokit-win/src/: capture.rs  ffi.rs  lib.rs  model_download.rs  permissions.rs  session.rs  speech.rs
crates/wisp-audiokit/src/: error.rs  lib.rs
crates/wisp-core/: Cargo.toml
crates/wisp-core/src/: error.rs  ids.rs  lib.rs  source.rs  transcript.rs
crates/wisp-storage/: Cargo.toml
crates/wisp-storage/src/: error.rs  lib.rs  migrations.rs  segments.rs  sessions.rs
formal/: README.md  check.sh
formal/tla/: ApplicationLifecycle.cfg  ApplicationLifecycle.tla  SessionLifecycle.cfg  SessionLifecycle.tla
formal/z3/: application_step_preserves_invariants.smt2  session_step_preserves_invariants.smt2
native/WispAudioKit/: Makefile  Package.swift
native/WispAudioKit/Resources/: Info.plist  wispctl.entitlements
native/WispAudioKit/Sources/WispAudioKit/: Bridge.swift  Helpers.swift  ProcessTapCapture.swift  TranscriptionPipeline.swift  WispSession.swift
native/WispAudioKit/Sources/wispctl/: Entry.swift  Helpers.swift  ProcessTapCapture.swift  TranscriptionPipeline.swift  main.swift
native/WispAudioKit/Tests/WispAudioKitTests/: WispSessionTests.swift
native/WispAudioKit/include/: wisp_audiokit.h
nix/: vosk-api.nix  vosk-model-small-ja.nix
site/: CNAME  README.md  index.html  screenshot.webm  styles.css
