[workspace]
members = [
  "apps/wisp-desktop",
  "crates/wisp-audiokit",
  "crates/wisp-audiokit-sys",
  "crates/wisp-core",
  "crates/wisp-storage",
]
resolver = "3"

[workspace.dependencies]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
expect_used = "warn"
panic = "warn"
pedantic = { level = "warn", priority = -1 }
todo = "warn"
unwrap_used = "warn"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.package]
edition = "2024"
version = "0.0.0"
