[workspace]
members = [
  "apps/wisp-desktop",
  "apps/wisp-mcp",
  "crates/wisp-audiokit",
  "crates/wisp-audiokit-sys",
  "crates/wisp-core",
  "crates/wisp-storage",
]
resolver = "3"

[workspace.dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
crossbeam-channel = "0.5.15"
gpui = "0.2.2"
rusqlite = { version = "0.40.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# Maintained fork of the (now-archived) serde_yaml. Used to serialize the
# CloudEvents-inspired transcript export frontmatter envelope.
serde_norway = "0.9.42"
tempfile = "3.27.0"
thiserror = "2.0.18"
uuid = { version = "1.23.1", features = ["v4"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
expect_used = "warn"
panic = "warn"
pedantic = { level = "warn", priority = -1 }
todo = "warn"
unwrap_used = "warn"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.package]
edition = "2024"
version = "0.0.0"
