[package]
name = "wisp-desktop"
edition.workspace = true
version.workspace = true
publish = false

[lints.clippy]
all = { level = "warn", priority = -1 }
expect_used = "warn"
panic = "warn"
pedantic = { level = "warn", priority = -1 }
todo = "warn"
unwrap_used = "warn"

# UI code has unique patterns that fight pedantic lints. Disable a few:
#   - GPUI closure types are deep; type aliases hurt readability more than
#     they help.
#   - Many GPUI callbacks capture non-Send/Sync handles (entities, etc.)
#     yet still need to be Rc/Arc shared between render passes.
type_complexity = "allow"
arc_with_non_send_sync = "allow"

[lints.rust]
unsafe_code = "deny"

[dependencies]
wisp-core = { path = "../../crates/wisp-core" }
wisp-storage = { path = "../../crates/wisp-storage" }
wisp-audiokit = { path = "../../crates/wisp-audiokit" }

# GPU-accelerated UI framework by the Zed team. V1 is macOS-only so the
# default features (x11/wayland/windows-manifest) are not strictly needed,
# but keeping them on means the workspace also builds on Linux CI where
# the platform-specific code paths are dead-stripped.
gpui = { workspace = true }
