[package]
name = "wisp-audiokit-win"
edition.workspace = true
version.workspace = true
publish = false
description = "Windows native audio capture and speech recognition for Wisp (static C ABI)."

[lib]
crate-type = ["staticlib", "rlib"]

[lints.clippy]
all = { level = "warn", priority = -1 }
expect_used = "warn"
panic = "warn"
pedantic = { level = "warn", priority = -1 }
todo = "warn"
unwrap_used = "warn"

[lints.rust]
unsafe_code = "allow"

[dependencies]
crossbeam-channel = { workspace = true }
hound = { workspace = true }
parking_lot = { workspace = true }
rubato = { workspace = true }
ureq = { workspace = true }
vosk = { workspace = true }
wasapi = { workspace = true }
zip = { workspace = true }
