[package]
name = "wisp-core"
edition.workspace = true
version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# Timestamps cross every boundary in the app (capture -> storage -> UI),
# so they live here in the shared crate.
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true }
thiserror = { workspace = true }
