[package]
name = "wisp-storage"
edition.workspace = true
version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
wisp-core = { path = "../wisp-core" }

# Bundled SQLite so the desktop binary ships with a known-good version and
# doesn't depend on a system SQLite. `chrono` feature lets rusqlite convert
# between SQLite TEXT and `chrono::DateTime<Utc>` directly.
rusqlite = { version = "0.34", features = ["bundled", "chrono"] }

chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
