[package]
name = "wisp-storage"
edition.workspace = true
version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
wisp-core = { path = "../wisp-core" }

# Bundled SQLite so the desktop binary ships with a known-good version and
# doesn't depend on a system SQLite. `chrono` feature lets rusqlite convert
# between SQLite TEXT and `chrono::DateTime<Utc>` directly.
rusqlite = { workspace = true }

chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
